--- a/demo-web-app.html
+++ b/demo-web-app.html
@@ -17,11 +17,11 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -98,7 +98,7 @@
   
         <!-- Intro Image -->
         <div class="section intro-image pt-0">
-            <img src="assets/demo/img/mockups/applify-browser-mockup.png" data-uhd data-max_width="1000" class="shadow-xxl responsive-on-lg" alt="Applify - App Landing HTML Template" />
+            <img src="assets/demo/img/mockups/applify-browser-mockup.png" data-uhd data-max_width="1000" class="shadow-xxl responsive-on-lg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
         </div><!-- .intro-image -->
         
         <!-- App Features Section -->
@@ -167,7 +167,7 @@
                                 <a href="demo-web-app.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-md-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="464" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="464" />
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                                 <a href="demo-web-app.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-md-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-8.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="445" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-8.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="445" />
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                                 <a href="demo-web-app.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-sm-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="451" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="451" />
                             </div>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
 	                    </div>
                     </div>
                     <div class="col-md-7 col-lg-8">
-                        <img class="responsive-on-sm laptop" src="assets/demo/img/mockups/applify-mockup-11.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="1000" />
+                        <img class="responsive-on-sm laptop" src="assets/demo/img/mockups/applify-mockup-11.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="1000" />
                     </div>
                 </div>
               
@@ -376,14 +376,14 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6 pb-5">
-	                    <img class="img-responsive" src="assets/demo/img/mockups/applify-widget-mockup-2.png" data-uhd alt="Applify - App Landing HTML Template" />
+	                    <img class="img-responsive" src="assets/demo/img/mockups/applify-widget-mockup-2.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
 	                    <h5 class="text-dark-gray">Lorem Ipsum Dolor Sit</h5>
                         <p class="mb-0">
 	                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
                     </div>
                     <div class="col-md-6 pb-5">
-	                    <img class="img-responsive" src="assets/demo/img/mockups/applify-widget-mockup-1.png" data-uhd alt="Applify - App Landing HTML Template" />
+	                    <img class="img-responsive" src="assets/demo/img/mockups/applify-widget-mockup-1.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
 	                    <h5 class="text-dark-gray">Lorem Ipsum Dolor Sit</h5>
                         <p class="mb-0">
 	                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -434,7 +434,7 @@
 				    </div>
 				    <!-- Image Column -->
 				    <div class="col-lg-6 col-md-7 img-block animate" data-show="fade-in-left"  data-vertical_center="true">
-					    <img src="assets/img/support/applify-support.png" alt="Applify - App Landing HTML Template" data-uhd class="img-fluid" data-max_width="460" />
+					    <img src="assets/img/support/applify-support.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd class="img-fluid" data-max_width="460" />
 				    </div>
 			    </div><!-- .row -->
 		    </div><!-- .container -->
