--- a/page-404.html
+++ b/page-404.html
@@ -17,9 +17,9 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
