--- a/page-coming-soon.html
+++ b/page-coming-soon.html
@@ -21,7 +21,7 @@
 			
 				<!-- UI App Icon -->
 				<div class="ui-app-icon">
-					<img src="assets/img/logo/applify-app-icon.png" alt="Applify - App Landing HTML Template" data-uhd>
+					<img src="assets/img/logo/applify-app-icon.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 				</div>
 
 				<!-- Heading -->
