--- a/demo-hero-tilt.html
+++ b/demo-hero-tilt.html
@@ -17,11 +17,11 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -208,21 +208,21 @@
    						<div class="ui-device-slider">
    							<!-- Device Image -->
    							<div class="device">
-   								<img src="assets/img/device-slider/device.png" data-uhd alt="Applify - App Landing HTML Template" />
+   								<img src="assets/img/device-slider/device.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    							</div>
    							<!-- Slider Images -->
    							<div id="device-slider-2" class="screens owl-carousel owl-theme">
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-1.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-1.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-8.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-8.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-2.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-2.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-3.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-3.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    							</div>
    						</div><!-- .ui-device-slider -->
@@ -363,21 +363,21 @@
    						<div class="ui-device-slider">
    							<!-- Device Image -->
    							<div class="device">
-   								<img src="assets/img/device-slider/device.png" data-uhd alt="Applify - App Landing HTML Template" />
+   								<img src="assets/img/device-slider/device.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    							</div>
    							<!-- Slider Images -->
    							<div id="device-slider-1" class="screens owl-carousel owl-theme">
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-6.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-6.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-5.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-5.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-7.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-7.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-4.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-4.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    							</div>
    						</div><!-- .ui-device-slider -->
@@ -778,7 +778,7 @@
    			<div class="container">
    				<div class="section-heading center">
    					<div class="ui-app-icon shadow-lg">
-   						<img src="assets/img/logo/applify-app-icon.png" alt="Applify - App Landing HTML Template" >
+   						<img src="assets/img/logo/applify-app-icon.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" >
    					</div>
    					<h2 class="heading">Download Applify Now</h2>
 					<p class="paragraph">
