--- a/demo-mobile-app-1.html
+++ b/demo-mobile-app-1.html
@@ -16,11 +16,11 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -109,21 +109,21 @@
    						<div class="ui-device-slider">
    							<!-- Device Image -->
    							<div class="device">
-   								<img src="assets/img/device-slider/device.png" data-uhd alt="Applify - App Landing HTML Template" />
+   								<img src="assets/img/device-slider/device.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    							</div>
    							<!-- Slider Images -->
    							<div id="device-slider-2" class="screens owl-carousel owl-theme">
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-1.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-1.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-8.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-8.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-2.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-2.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    								<div class="item">
-   									<img src="assets/img/device-slider/app-screen-3.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
+   									<img src="assets/img/device-slider/app-screen-3.jpg" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
    								</div>
    							</div>
    						</div><!-- .ui-device-slider -->
@@ -267,7 +267,7 @@
    					</div>
    					<!-- Image Column -->
    					<div class="col-md-6 col-sm-5 img-block animate" data-show="fade-in-left">
-   						<img src="assets/img/mockups/applify-mockup-3.png" alt="Applify - App Landing HTML Template" data-uhd class="responsive-on-sm" data-max_width="577" />
+   						<img src="assets/img/mockups/applify-mockup-3.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd class="responsive-on-sm" data-max_width="577" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
@@ -302,7 +302,7 @@
                                 <a href="demo-mobile-app-1.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-md-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="464" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="464" />
                             </div>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                                 <a href="demo-mobile-app-1.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-md-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-8.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="445" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-8.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="445" />
                             </div>
                         </div>
                     </div>
@@ -338,7 +338,7 @@
                                 <a href="demo-mobile-app-1.html#" class="btn-link btn-arrow">Explore</a>
                             </div>
                             <div class="col-md-6">
-                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" data-uhd alt="Applify - App Landing HTML Template" data-max_width="451" />
+                                <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" data-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="451" />
                             </div>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
    					</div>
    					<!-- Image Column -->
    					<div class="col-md-6 col-sm-5 img-block animate" data-show="fade-in-left">
-   						<img src="assets/demo/img/mockups/applify-mockup-2-lg.png" alt="Applify - App Landing HTML Template" data-uhd class="responsive-on-sm" data-max_width="547" />
+   						<img src="assets/demo/img/mockups/applify-mockup-2-lg.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd class="responsive-on-sm" data-max_width="547" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
@@ -390,31 +390,31 @@
 				<div class="ui-app-screens owl-carousel owl-theme animate" data-show="fade-in">
 					<!-- App Screen 1 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-5.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-5.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
 					<!-- App Screen 2 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-1.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-1.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
 					<!-- App Screen 3 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-6.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-6.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
 					<!-- App Screen 4 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-3.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-3.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
 					<!-- App Screen 5 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-7.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-7.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
   					<!-- App Screen 6 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-2.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-2.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
 					<!-- App Screen 8 -->
 					<div class="ui-card shadow-lg">
-						<img src="assets/img/app-screens/app-screen-4.jpg" alt="Applify - App Landing HTML Template" data-uhd/>
+						<img src="assets/img/app-screens/app-screen-4.jpg" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd/>
 					</div>
    				</div><!-- .ui-app-screens -->
    			</div><!-- .container -->
@@ -698,7 +698,7 @@
    			<div class="container">
    				<div class="section-heading center">
    					<div class="ui-app-icon shadow-lg">
-   						<img src="assets/img/logo/applify-app-icon.png" alt="Applify - App Landing HTML Template" >
+   						<img src="assets/img/logo/applify-app-icon.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" >
    					</div>
    					<h2 class="heading">Download Applify Now</h2>
 					<p class="paragraph">
