--- a/demo-saas.html
+++ b/demo-saas.html
@@ -17,11 +17,11 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -141,7 +141,7 @@
                             <a href="demo-saas.html#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
-                            <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" dat-uhd alt="Applify - App Landing HTML Template" data-max_width="464" />
+                            <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-7.png" dat-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-max_width="464" />
                         </div>
                     </div>
                     <div class="row">
@@ -155,7 +155,7 @@
                             <a href="demo-saas.html#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
-                            <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" dat-uhd alt="Applify - App Landing HTML Template"  data-max_width="451"/>
+                            <img class="responsive-on-xs" src="assets/img/mockups/applify-mockup-10.png" dat-uhd alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm"  data-max_width="451"/>
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                         </div><!-- .section-heading -->
                     </div>
                     <div class="col-lg-6">
-                        <img src="assets/demo/img/mockups/applify-browser-mockup.png" data-uhd data-max_width="1065" class="responsive-on-md shadow-xl" alt="Applify - App Landing HTML Template" />
+                        <img src="assets/demo/img/mockups/applify-browser-mockup.png" data-uhd data-max_width="1065" class="responsive-on-md shadow-xl" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" />
                     </div>
                 </div>
    			</div><!-- .container -->
@@ -492,7 +492,7 @@
    					</div>
    					<!-- Image Column -->
    					<div class="col-lg-6 col-md-7 img-block animate" data-show="fade-in-left"  data-vertical_center="true">
-   						<img src="assets/img/support/applify-support.png" alt="Applify - App Landing HTML Template" data-uhd class="img-fluid" data-max_width="460" />
+   						<img src="assets/img/support/applify-support.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd class="img-fluid" data-max_width="460" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
@@ -556,19 +556,19 @@
    			<div class="container">
    				<div class="d-flex justify-content-between">
    					<div>
-   						<img src="assets/img/clients-logos/codepen.png" alt="Applify - App Landing HTML Template" data-uhd />
+   						<img src="assets/img/clients-logos/codepen.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/clients-logos/github.png" alt="Applify - App Landing HTML Template" data-uhd />
+   						<img src="assets/img/clients-logos/github.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/clients-logos/dribbble.png" alt="Applify - App Landing HTML Template" data-uhd />
+   						<img src="assets/img/clients-logos/dribbble.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/clients-logos/pinterest.png" alt="Applify - App Landing HTML Template" data-uhd />
+   						<img src="assets/img/clients-logos/pinterest.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/clients-logos/behance.png" alt="Applify - App Landing HTML Template" data-uhd />
+   						<img src="assets/img/clients-logos/behance.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
