--- a/page-contact.html
+++ b/page-contact.html
@@ -17,11 +17,11 @@
 		<div class="container">
 		
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
                 <!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -177,7 +177,7 @@
    					</div>
    					<!-- Image Column -->
    					<div class="col-lg-6 col-md-5 img-block animate" data-show="fade-in-left">
-   						<img src="assets/img/mockups/applify-mockup-2-lg.png" alt="Applify - App Landing HTML Template" data-uhd class="responsive-on-sm" data-max_width="547" />
+   						<img src="assets/img/mockups/applify-mockup-2-lg.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd class="responsive-on-sm" data-max_width="547" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
