--- a/page-pricing.html
+++ b/page-pricing.html
@@ -17,11 +17,11 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Applify - App Landing HTML Template" style="width: 199px;">
+			<a class="ui-variable-logo navbar-brand" href="index.html" title="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" style="width: 199px;">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd="">
+				<img class="logo-default" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd="">
 				<!-- Default Logo -->
-				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="Applify - App Landing HTML Template" data-uhd="">
+				<img class="logo-transparent" src="assets/img/logo/applify-logo-white.png" alt="WePlus - Chuyên Cung Cấp Giải Pháp Ứng Dụng Phần Mềm" data-uhd="">
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
